Updated Soul Sufi website design and content

--- a/categories.html
+++ b/categories.html
@@ -151,10 +151,9 @@
     <p><strong>What's Included:</strong><br>
     My unplugged performances emphasize the raw, intimate essence of music... Acoustic Guitar and Vocals, Cajon, Djembe, Harmonica, or Ukulele.</p>
     <p class="sub-heading">Where Performed:</p>
-    <p><strong>Colleges:</strong><br>
-    IIT Kanpur, ITM UNIVERSITY(GWALIOR)</p>
+    <p><strong>Colleges:</strong><br></p>
     <p><strong>Corporate & Hotels:</strong><br>
-    Radisson, Barrel House & Leverage Edu Noida</p>
+    Radisson, Barrel House</p>
     <p><strong>Weddings & Parties:</strong><br>
     Private ceremonies, brunches, receptions, birthdays</p>
   </div>
@@ -167,7 +166,7 @@
     <p><strong>Colleges:</strong><br>
     Vikram University, GSFC UNIVERSITY</p>
     <p><strong>Corporate & Hotels:</strong><br>
-    Makau Club, Simple Assist (Mumbai)</p>
+    Makau Club, Simple Assist Company</p>
     <p><strong>Weddings & Parties:</strong><br>
     Sangeet, Mehendi, Receptions</p>
   </div>
