--- a/liveperformances.html
+++ b/liveperformances.html
@@ -235,8 +235,18 @@ body {
       <video src="live band 12.mp4" controls style="width: 300px; border-radius: 12px; box-shadow: 0 0 15px #ffc0cb;"></video>
       <video src="live band 10.mp4" controls style="width: 300px; border-radius: 12px; box-shadow: 0 0 15px #ffc0cb;"></video>
       <video src="live band 14.mp4" controls style="width: 300px; border-radius: 12px; box-shadow: 0 0 15px #ffc0cb;"></video>
-      <video src="live band 26.mp4" controls style="width: 300px; border-radius: 12px; box-shadow: 0 0 15px #ffc0cb;"></video>
-    </div>
+      <video src="live band 27.mp4" controls style="width: 300px; border-radius: 12px; box-shadow: 0 0 15px #ffc0cb;"></video> 
+      <video src="live band 28.mp4" controls style="width: 300px; border-radius: 12px; box-shadow: 0 0 15px #ffc0cb;"></video> 
+      <video src="live band 29.mp4" controls style="width: 300px; border-radius: 12px; box-shadow: 0 0 15px #ffc0cb;"></video> 
+      <video src="live band 30.mp4" controls style="width: 300px; border-radius: 12px; box-shadow: 0 0 15px #ffc0cb;"></video>
+      <video src="live band 31.mp4" controls style="width: 300px; border-radius: 12px; box-shadow: 0 0 15px #ffc0cb;"></video> 
+      <video src="live band 32.mp4" controls style="width: 300px; border-radius: 12px; box-shadow: 0 0 15px #ffc0cb;"></video> 
+      <video src="live band 33.mp4" controls style="width: 300px; border-radius: 12px; box-shadow: 0 0 15px #ffc0cb;"></video>  
+      <video src="live band 34.mp4" controls style="width: 300px; border-radius: 12px; box-shadow: 0 0 15px #ffc0cb;"></video> 
+      <video src="live band 35.mp4" controls style="width: 300px; border-radius: 12px; box-shadow: 0 0 15px #ffc0cb;"></video> 
+      <video src="live band 36.mp4" controls style="width: 300px; border-radius: 12px; box-shadow: 0 0 15px #ffc0cb;"></video>
+      <video src="live band 26.mp4" controls style="width: 300px; border-radius: 12px; box-shadow: 0 0 15px #ffc0cb;"></video>  
+      </div>
   </section>
   
   <!-- 🖼️ IMAGE GALLERY SECTION -->
@@ -251,6 +261,7 @@ body {
       <img src="live band 7.jpeg" alt="Team Photo" style="width: 280px; border-radius: 12px; box-shadow: 0 0 15px #b2f7ef;">
       <img src="live band 8.jpg" alt="Team Photo" style="width: 280px; border-radius: 12px; box-shadow: 0 0 15px #b2f7ef;">
       <img src= "live band 9.jpg" alt="Team Photo" style="width: 280px; border-radius: 12px; box-shadow: 0 0 15px #b2f7ef;">
+      <img src= "live band 27.jpg" alt="Team Photo" style="width: 280px; border-radius: 12px; box-shadow: 0 0 15px #b2f7ef;">
       
     </div>
   </section>
