--- a/index.html
+++ b/index.html
@@ -1412,8 +1412,8 @@
 
   <div class="passport-photo-strip">
     <div class="passport-track">
-      <img src="slideshow 1.jpeg" alt="1" />
-      <img src="slideshow 2.jpeg" alt="2" />
+      <img src="slideshow 1.jpg" alt="1" />
+      <img src="slideshow 2.jpg" alt="2" />
       <img src="slideshow 3.jpeg" alt="3" />
       <img src="slideshow 4.jpeg" alt="4" />
       <img src="slideshow 5.jpeg" alt="5" />
@@ -1425,6 +1425,8 @@
       <img src="slideshow 11.jpeg" alt="11" />
       <img src="slideshow 12.jpeg" alt="12" />
       <img src="slideshow 13.jpeg" alt="13" />
+      <img src="slideshow 14.jpeg" alt="14" />
+      <img src="slideshow 15.jpeg" alt="15" />
 
       <img src="slideshow 1.jpg" alt="1" />
       <img src="slideshow 2.jpg" alt="2" />
