Change slideshow image extensions from .jpg to .jpeg
Updated image file extensions from .jpg to .jpeg for slideshow images.

--- a/index.html
+++ b/index.html
@@ -1412,8 +1412,8 @@
 
   <div class="passport-photo-strip">
     <div class="passport-track">
-      <img src="slideshow 1.jpg" alt="1" />
-      <img src="slideshow 2.jpg" alt="2" />
+      <img src="slideshow 1.jpeg" alt="1" />
+      <img src="slideshow 2.jpeg" alt="2" />
       <img src="slideshow 3.jpeg" alt="3" />
       <img src="slideshow 4.jpeg" alt="4" />
       <img src="slideshow 5.jpeg" alt="5" />
@@ -1428,8 +1428,8 @@
       <img src="slideshow 14.jpeg" alt="14" />
       <img src="slideshow 15.jpeg" alt="15" />
 
-      <img src="slideshow 1.jpg" alt="1" />
-      <img src="slideshow 2.jpg" alt="2" />
+      <img src="slideshow 1.jpeg" alt="1" />
+      <img src="slideshow 2.jpeg" alt="2" />
       <img src="slideshow 3.jpeg" alt="3" />
       <img src="slideshow 4.jpeg" alt="4" />
       <img src="slideshow 5.jpeg" alt="5" />
