Updated Soul Sufi website design and content

--- a/index.html
+++ b/index.html
@@ -1412,14 +1412,14 @@
 
   <div class="passport-photo-strip">
     <div class="passport-track">
-      <img src="slideshow 1.jpg" alt="1" />
-      <img src="slideshow 2.jpg" alt="2" />
+      <img src="slideshow 1.jpeg" alt="1" />
+      <img src="slideshow 2.jpeg" alt="2" />
       <img src="slideshow 3.jpeg" alt="3" />
       <img src="slideshow 4.jpeg" alt="4" />
       <img src="slideshow 5.jpeg" alt="5" />
       <img src="slideshow 6.jpeg" alt="6" />
       <img src="slideshow 7.jpeg" alt="7" />
-      <img src="live band 4.jpeg" alt="8" />
+      <img src="live band 8.jpg" alt="8" />
       <img src="slideshow 9.jpeg" alt="9" />
       <img src="slideshow 10.jpeg" alt="10" />
       <img src="slideshow 11.jpeg" alt="11" />
@@ -1427,9 +1427,10 @@
       <img src="slideshow 13.jpeg" alt="13" />
       <img src="slideshow 14.jpeg" alt="14" />
       <img src="slideshow 15.jpeg" alt="15" />
+      <img src="slideshow 16.jpeg" alt="16" />
 
-      <img src="slideshow 1.jpg" alt="1" />
-      <img src="slideshow 2.jpg" alt="2" />
+      <img src="slideshow 1.jpeg" alt="1" />
+      <img src="slideshow 2.jpeg" alt="2" />
       <img src="slideshow 3.jpeg" alt="3" />
       <img src="slideshow 4.jpeg" alt="4" />
       <img src="slideshow 5.jpeg" alt="5" />
@@ -1443,6 +1444,7 @@
       <img src="slideshow 13.jpeg" alt="13" />
       <img src="slideshow 14.jpeg" alt="14" />
       <img src="slideshow 15.jpeg" alt="15" />
+      <img src="slideshow 16.jpeg" alt="16" />
     </div>
     
   </div>
